--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body class="bg-slate-50 min-h-screen p-4 sm:p-8">
     <div id="app" class="max-w-xl mx-auto">
+        
         <header class="mb-6 flex flex-col sm:flex-row justify-between items-start gap-4">
             <div>
                 <h1 id="title" class="text-3xl font-black text-slate-900 tracking-tight">Вітаємо! 👋</h1>
@@ -44,6 +45,7 @@
 
         <div id="step-2" class="view hidden space-y-1"></div>
         <div id="step-3" class="view hidden space-y-1"></div>
+
         <div id="step-4" class="view hidden">
             <div id="booklets-results" class="space-y-3 mb-8"></div>
             <div id="bases-section" class="hidden">
@@ -51,10 +53,12 @@
                 <div id="bases-results" class="space-y-3"></div>
             </div>
         </div>
+
         <div id="view-search" class="hidden space-y-3">
             <h2 class="text-xs font-black text-blue-500 uppercase tracking-widest mb-4">Результати пошуку</h2>
             <div id="search-results-container" class="space-y-3"></div>
         </div>
+
     </div>
 
     <script>
@@ -62,6 +66,7 @@
         let history = [];
         let currentStepId = 'step-1';
         let selection = { type: '', source: '', level: '' };
+
         const BOT_URL = "https://krok-bot.onrender.com";
 
         async function init() {
@@ -70,23 +75,35 @@
             document.getElementById('tg-id').value = localStorage.getItem('tg_chat_id') || "";
         }
 
-        function saveId() { localStorage.setItem('tg_chat_id', document.getElementById('tg-id').value); }
+        function saveId() {
+            localStorage.setItem('tg_chat_id', document.getElementById('tg-id').value);
+        }
 
-        async function sendToBot(btn, fileName) {
+        async function sendToBot(btn, item) {
             const userId = localStorage.getItem('tg_chat_id');
             if (!userId) return alert("Введіть свій Telegram ID у поле зверху!");
+
             const originalText = btn.innerText;
-            btn.innerText = "⌛...";
+            btn.innerText = "⏳...";
             btn.disabled = true;
+
+            // Figure out absolute file URL
+            let fileUrl = item.path;
+            if (!fileUrl.startsWith('http')) {
+                fileUrl = window.location.origin + '/' + item.path;
+            }
+
             try {
-                const res = await fetch(`${BOT_URL}/send?user_id=${userId}&file=${encodeURIComponent(fileName)}`);
+                const apiPath = `${BOT_URL}/send?user_id=${userId}&url=${encodeURIComponent(fileUrl)}&name=${encodeURIComponent(item.name)}`;
+                const res = await fetch(apiPath);
                 if (res.ok) {
                     btn.innerText = "✅";
                     setTimeout(() => { btn.innerText = originalText; btn.disabled = false; }, 2000);
                 } else throw new Error();
             } catch (e) {
                 alert("Помилка: Бот офлайн або ID невірний.");
-                btn.innerText = "Err"; btn.disabled = false;
+                btn.innerText = "Err";
+                btn.disabled = false;
             }
         }
 
@@ -101,7 +118,9 @@
             const container = document.getElementById('search-results-container');
             if (q.length >= 3) {
                 container.innerHTML = '';
-                const filtered = masterData.filter(i => i.name.toLowerCase().includes(q) || i.subject.toLowerCase().includes(q) || i.exam_type.toLowerCase().includes(q));
+                const filtered = masterData.filter(i => 
+                    i.name.toLowerCase().includes(q) || i.subject.toLowerCase().includes(q) || i.exam_type.toLowerCase().includes(q)
+                );
                 if (filtered.length === 0) container.innerHTML = '<div class="text-center p-10 text-slate-400 font-bold">Нічого не знайдено</div>';
                 else filtered.forEach(i => container.innerHTML += createCard(i));
                 showView('view-search');
@@ -122,14 +141,18 @@
 
         function renderSources() {
             const sources = [...new Set(masterData.filter(i => i.exam_type === selection.type).map(i => i.source))];
-            document.getElementById('step-2').innerHTML = sources.map(s => `<button onclick="nextStep(2, '${s}')" class="btn-nav"><div class="font-bold text-lg text-slate-700">${s}</div><span>→</span></button>`).join('');
-            updateSubtitle(); showView('step-2');
+            const container = document.getElementById('step-2');
+            container.innerHTML = sources.map(s => `<button onclick="nextStep(2, '${s}')" class="btn-nav"><div class="font-bold text-lg text-slate-700">${s}</div><span>→</span></button>`).join('');
+            updateSubtitle();
+            showView('step-2');
         }
 
         function renderLevels() {
             const levels = [...new Set(masterData.filter(i => i.exam_type === selection.type && i.source === selection.source).map(i => i.level))].sort();
-            document.getElementById('step-3').innerHTML = levels.map(l => `<button onclick="nextStep(3, '${l}')" class="btn-nav"><div class="font-bold text-lg text-slate-700">${l}</div><span>→</span></button>`).join('');
-            updateSubtitle(); showView('step-3');
+            const container = document.getElementById('step-3');
+            container.innerHTML = levels.map(l => `<button onclick="nextStep(3, '${l}')" class="btn-nav"><div class="font-bold text-lg text-slate-700">${l}</div><span>→</span></button>`).join('');
+            updateSubtitle();
+            showView('step-3');
         }
 
         function renderFinal() {
@@ -137,9 +160,11 @@
             const basesDiv = document.getElementById('bases-results');
             const basesSection = document.getElementById('bases-section');
             bookletDiv.innerHTML = ''; basesDiv.innerHTML = '';
+
             const filtered = masterData.filter(i => i.exam_type === selection.type && i.source === selection.source && i.level === selection.level);
             const booklets = filtered.filter(i => i.type === 'booklet');
             const bases = filtered.filter(i => i.type === 'base');
+
             booklets.forEach(i => bookletDiv.innerHTML += createCard(i));
             if (bases.length > 0) {
                 basesSection.classList.remove('hidden');
@@ -147,34 +172,43 @@
                 for (const [subject, items] of Object.entries(grouped)) {
                     basesDiv.innerHTML += `<details class="group bg-white rounded-3xl border border-slate-200 overflow-hidden mb-2"><summary class="p-5 font-bold text-slate-700 cursor-pointer hover:bg-slate-50 flex justify-between items-center list-none"><span>📂 ${subject}</span><span class="text-xs bg-slate-100 text-slate-500 px-2 py-1 rounded-lg">${items.length}</span></summary><div class="p-3 space-y-2 bg-slate-50 border-t border-slate-100">${items.map(i => createCard(i)).join('')}</div></details>`;
                 }
-            } else basesSection.classList.add('hidden');
-            updateSubtitle(); showView('step-4');
+            } else { basesSection.classList.add('hidden'); }
+            updateSubtitle();
+            showView('step-4');
         }
 
         function updateSubtitle() {
-            const sub = document.getElementById('subtitle');
-            if (selection.level) sub.innerText = `${selection.source} > ${selection.level}`;
-            else if (selection.source) sub.innerText = `База: ${selection.source}`;
-            else if (selection.type) sub.innerText = `Категорія: ${selection.type}`;
-            else sub.innerText = "Оберіть тип іспиту";
+            if (selection.level) document.getElementById('subtitle').innerText = `${selection.source} > ${selection.level}`;
+            else if (selection.source) document.getElementById('subtitle').innerText = `База: ${selection.source}`;
+            else if (selection.type) document.getElementById('subtitle').innerText = `Категорія: ${selection.type}`;
+            else document.getElementById('subtitle').innerText = "Оберіть тип іспиту";
             if (selection.type) document.getElementById('title').innerText = selection.type;
         }
 
         function createCard(i) {
-            const badge = i.source === 'База з ЦТ' ? 'bg-ct' : (i.source === 'Звичайні Базі' ? 'bg-baza' : 'bg-old');
-            if (i.source === 'База з ЦТ') {
-                return `<div class="bg-white p-4 rounded-2xl shadow-sm border border-slate-100 flex justify-between items-center"><div class="pr-4"><span class="source-badge ${badge}">${i.source}</span><div class="font-bold text-slate-800 leading-tight mt-1 text-sm">${i.name}</div></div><button onclick="sendToBot(this, '${i.name}')" class="bg-blue-600 text-white px-4 py-2 rounded-xl font-bold text-xs shadow-md hover:bg-blue-700 transition-colors">GET</button></div>`;
-            }
-            return `<div class="bg-white p-4 rounded-2xl shadow-sm border border-slate-100 flex justify-between items-center"><div class="pr-4"><span class="source-badge ${badge}">${i.source}</span><div class="font-bold text-slate-800 leading-tight mt-1 text-sm">${i.name}</div></div><a href="${encodeURI(i.path)}" target="_blank" class="bg-slate-600 text-white px-4 py-2 rounded-xl font-bold text-xs shadow-md hover:bg-slate-700 transition-colors">Open</a></div>`;
+            const badge = i.source.includes('База') ? 'bg-ct' : (i.source.includes('Звичайні') ? 'bg-baza' : 'bg-old');
+            // Stringify the object safely for the button click
+            const itemData = JSON.stringify(i).replace(/'/g, "&apos;");
+            return `
+                <div class="bg-white p-4 rounded-2xl shadow-sm border border-slate-100 flex justify-between items-center">
+                    <div class="pr-4">
+                        <span class="source-badge ${badge}">${i.source}</span>
+                        <div class="font-bold text-slate-800 leading-tight mt-1 text-sm">${i.name}</div>
+                    </div>
+                    <button onclick='sendToBot(this, ${itemData})' class="bg-blue-600 text-white px-4 py-2 rounded-xl font-bold text-xs shadow-md hover:bg-blue-700 transition-colors">GET</button>
+                </div>`;
         }
 
         function resetNav() {
-            history = []; selection = { type: '', source: '', level: '' };
+            history = [];
+            selection = { type: '', source: '', level: '' };
             document.getElementById('global-search').value = '';
             document.getElementById('back-btn').classList.add('hidden');
             document.getElementById('title').innerText = "Вітаємо! 👋";
-            updateSubtitle(); showView('step-1');
+            updateSubtitle();
+            showView('step-1');
         }
+
         init();
     </script>
 </body>
